Fix anchor z-index

--- a/src/ui/components/context_menu/context_menu.scss
+++ b/src/ui/components/context_menu/context_menu.scss
@@ -1,3 +1,4 @@
 .ln-context-anchor {
     height: 100%;
+    z-index: -10;
 }
