--- a/src/ui/views/main/components/channel/message/msg.scss
+++ b/src/ui/views/main/components/channel/message/msg.scss
@@ -253,7 +253,6 @@
             top: 0;
             left: 0;
             right: 0;
-            z-index: -10;
         }
     }
 
